--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,7 +16,16 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
-
+h1 {
+  /* 2310dc */
+  color: #6c5ef3;
+}
+h2 {
+  /* color: #2310dc; */
+}
+h3 {
+  color: #978df7;
+}
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
   --ifm-color-primary: #d9a7ef;
